gcc/testsuite/gm2/iso/const/fail/expression.mod
MODULE expression ;

CONST
   foo = ABS (i) + 2 + ABS (-100) ;

VAR
   i: INTEGER ;
BEGIN

END expression.
